[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freqlens"
version = "0.1.0"
description = "A project for audio comparison and analysis"
authors = [
    { name = "Dayal Madan"}
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21",
    "librosa>=0.8",
    "pydub>=0.25",
    "scipy>=1.7",
    "matplotlib>=3.4"
]

[tool.setuptools.packages.find]
where = ["freqlens"]

[project.scripts]
freqlens = "freqlens.cli:main"
